# mcp-project-context-server

./: .coveragerc  .coveragerc.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.context/: adr-creation-and-review-process.md  project.md
.context/decisions/: ADR-00001-mcp-protocol.md  ADR-00002-chromadb-vector-store.md  ADR-00003-embedding-providers.md  ADR-00004-modular-tool-architecture.md  ADR-00005-environment-configuration.md  ADR-00006-drop-recreate-indexing.md  ADR-00007-chunking-strategy.md  ADR-00008-posix-path-normalization.md  ADR-00009-repomix-integration.md  ADR-00010-adr-tooling.md  ADR-00011-repository-bootstrapping.md  ADR-00012-targeted-adr-and-project-tools.md  ADR-00013-load-project-context-lightweight-init.md
.continue/mcpServers/: local-system-servers.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/tools/: build-and-publish.py  build_and_publish.py  conftest.py  test_build_and_publish.py
.github/workflows/: build-and-publish.yml  codecov.yaml  lint.yml  release.yml  tox.yml
project_context_server/: __init__.py  __main__.py
project_context_server/indexing/chroma/: indexer.py
project_context_server/indexing/ollama/: embedder.py
project_context_server/tools/: index_context.py  load_context.py  search_context.py
scripts/: test_client.py
src/mcp_project_context_server/: __init__.py  __main__.py  context_server.py  server.py
src/mcp_project_context_server/helpers/: context.py
src/mcp_project_context_server/indexing/: chunker.py
src/mcp_project_context_server/indexing/chroma/: indexer.py
src/mcp_project_context_server/indexing/ollama/: embedder.py
src/mcp_project_context_server/integrations/chroma/: client.py
src/mcp_project_context_server/integrations/ollama/: client.py
src/mcp_project_context_server/tools/: index_context.py  load_context.py  save_session.py  search_context.py
src/project_context_server/: server.py
src/project_context_server/integrations/ollama/: client.py
src/project_context_server/tools/: save_session.py
tests/: test_chunker.py  test_helpers.py  test_tool_index_context.py  test_tool_load_context.py  test_tool_save_session.py  test_tool_search_context.py
