[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-project-context-server"
version = "0.2.2"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "chromadb",
    "ollama",
    "watchdog",
]

[project.scripts]
project-context-server = "mcp_project_context_server.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_project_context_server"]
